--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # ----
 # Site
 
-title: Cause Template
-url: https://clean-oryx.cloudvent.net
-baseurl:
-google_analytics_key:
+title: Broken Brains
+url: https://brokenbrains.sg 
+baseurl: 
+google_analytics_key: 
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
@@ -75,3 +75,5 @@ _options:
   newsletter_background_image:
     width: 1880
     height: 1880
+
+exclude: [vendor]
