--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,8 +1,7 @@
-company_name: The Sheep Vote
-mission_statement: The Sheep Vote is a non-profit organisation started in 2005 by the great shepard, Wooly McBaa.
-address: 123 Example Street, City
-phone: +1 123 456 7891
-email: donate@yourwebsite.com
-facebook: CloudCannon
-twitter: CloudCannon
-youtube: CloudCannon
+company_name: Broken Brains
+mission_statement: Broken Brains is a patient support group started in 2014 by the traumatic brain injury survivor, Sian (aka Jonathan) Liu.
+address: Singapore, Singapore
+phone: +65 9021 7967
+email: jonathan@brokenbrains.sg
+facebook: brokenbrainsco
+twitter: brokenbrainsco
