--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,9 @@ defaults:
     values:
       layout: "default"
 
-donation_embed: '<script src="https://donorbox.org/widget.js" type="text/javascript"></script><iframe src="https://donorbox.org/embed/give-sheep-the-vote?hide_donation_meter=true" height="685px" width="100%" style="max-width:425px; min-width:310px" seamless="seamless" id="dbox-form-embed" name="donorbox" frameborder="0" scrolling="no"></iframe>'
+donation_embed: '<script src="https://donorbox.org/widget.js" paypalExpress="false"></script><iframe
+allowpaymentrequest="" frameborder="0" height="900px" name="donorbox" scrolling="no" seamless="seamless"
+src="https://donorbox.org/embed/broken-brains-campaign" style="max-width: 500px; min-width: 250px; max-height:none!important" width="100%"></iframe>'
 newsletter_action: "//your-mailchimp-action-url.com"
 
 plugins:
