Updated company footer

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,5 +1,6 @@
 company_name: Broken Brains
-mission_statement: Broken Brains is a patient support group started in 2014 by the traumatic brain injury survivor, Sian (aka Jonathan) Liu.
+mission_statement: Working towards improving the lives of individuals and families affected by head injuries through
+  community and collaboration.
 address: Singapore, Singapore
 phone: +65 9021 7967
 email: jonathan@brokenbrains.sg
